<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.last9</groupId>
        <artifactId>vertx-otel-autoconfigure</artifactId>
        <version>2.2.2-beta.7</version>
    </parent>

    <artifactId>vertx3-rxjava2-otel-autoconfigure</artifactId>
    <packaging>jar</packaging>

    <name>Vert.x 3 RxJava2 OpenTelemetry Auto-Configure</name>
    <description>
        Zero-code OpenTelemetry auto-instrumentation for Vert.x 3 + RxJava2 applications.
        Provides automatic tracing for HTTP server/client, EventBus, and RxJava2 context propagation.
    </description>

    <dependencyManagement>
        <dependencies>
            <!-- Vert.x 3 BOM -->
            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-stack-depchain</artifactId>
                <version>${vertx3.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Core module (OTel SDK setup, MdcTraceTurboFilter) -->
        <dependency>
            <groupId>io.last9</groupId>
            <artifactId>vertx-otel-core</artifactId>
        </dependency>

        <!-- OpenTelemetry SDK (for manual span creation - no VertxTracer SPI in v3) -->
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-sdk</artifactId>
        </dependency>

        <!-- OpenTelemetry Semantic Conventions (for HTTP span attributes) -->
        <dependency>
            <groupId>io.opentelemetry.semconv</groupId>
            <artifactId>opentelemetry-semconv</artifactId>
        </dependency>

        <!-- ByteBuddy: bytecode instrumentation for zero-code tracing
             (intercepts Router.router() and WebClient.create() at class-load time) -->
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy</artifactId>
        </dependency>
        <!-- ByteBuddy Agent: self-attach for OtelLauncher (no -javaagent needed) -->
        <dependency>
            <groupId>net.bytebuddy</groupId>
            <artifactId>byte-buddy-agent</artifactId>
        </dependency>

        <!-- Logback (provided via core, needed at test time for MdcTraceTurboFilter tests) -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Vert.x Core (provided - app will have this) -->
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-core</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Vert.x Web (provided - for SpanNameUpdater) -->
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-web</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Vert.x RxJava2 (provided - app may have this) -->
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-rx-java2</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Vert.x Kafka client (provided - app will have this if using Kafka) -->
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-kafka-client</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Vert.x SQL common (provided - app will have this if using JDBC/MySQL/PostgreSQL) -->
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-sql-common</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Vert.x Redis client (provided - app will have this if using Redis) -->
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-redis-client</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Vert.x reactive MySQL client (provided - app will have this if using MySQL reactive API) -->
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-mysql-client</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Aerospike client (provided - app will have this if using Aerospike) -->
        <dependency>
            <groupId>com.aerospike</groupId>
            <artifactId>aerospike-client</artifactId>
            <version>${aerospike-client.version}</version>
            <scope>provided</scope>
            <exclusions>
                <!-- luaj-jse has classes in the unnamed package, which breaks the
                     JDK 9+ javadoc module descriptor analysis. We don't use Lua
                     scripting, so this transitive dep is safe to exclude. -->
                <exclusion>
                    <groupId>org.luaj</groupId>
                    <artifactId>luaj-jse</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- luaj-jse is excluded from aerospike-client above to prevent the JDK 17
             javadoc tool from failing on its unnamed-package class. Re-added here
             at test scope so the aerospike tests still have it on their classpath. -->
        <dependency>
            <groupId>org.luaj</groupId>
            <artifactId>luaj-jse</artifactId>
            <version>3.0.1</version>
            <scope>test</scope>
        </dependency>

        <!-- SLF4J no-op binding: NOT bundled here. Only the standalone agent
             (vertx3-otel-agent) needs this for premain-time logging before the
             app classpath is available. When this library is used as a compile
             dependency, bundling slf4j-nop would override the app's logback
             binding and suppress all application logging. -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- ==================== Test Dependencies ==================== -->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-sdk-testing</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-junit5</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-web-client</artifactId>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <!-- Main sources compile to Java 8 so the agent works on Java 8 JVMs.
                 Test sources use the parent default (source/target 11) which does not
                 restrict JDK API usage — tests run on Java 17 in CI. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <release>8</release>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Automatic-Module-Name>io.last9.tracing.otel.v3</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
